fix links on ios

--- a/src/handlers/nelp/_NelpHandler.scss
+++ b/src/handlers/nelp/_NelpHandler.scss
@@ -9,4 +9,8 @@
     background-color: $color-nelp-orange;
   }
 
+  .task {
+    padding: 1em;
+    cursor: pointer;
+  }
 }
